--- a/data/interface/index.html
+++ b/data/interface/index.html
@@ -97,7 +97,7 @@
 		<script type="text/javascript" src="vendor/codemirror/xml.js"></script>
 		<script type="text/javascript" src="vendor/codemirror/css.js"></script>
 		<!-- -->
-		<script type="text/javascript" src="vendor/terser/bundle.min.js"></script>
+		<script type="text/javascript" src="vendor/terser/terser.min.js"></script>
 		<script type="text/javascript" src="vendor/terser/htmlminifier.min.js"></script>
 		<!-- -->
 		<script type="text/javascript" src="index.js"></script>
