--- a/data/interface/index.html
+++ b/data/interface/index.html
@@ -8,6 +8,7 @@
 		<!-- -->
 		<link type="text/css" rel="stylesheet" href="index.css">
 		<link type="text/css" rel="stylesheet" href="vendor/codemirror/codemirror.css">
+		<link type="text/css" rel="stylesheet" href="vendor/codemirror/material-darker.css">
 	</head>
 	<body>
 		<div class="hidden">
